// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tree /> Tree - default 1`] = `
<div
  className="kb-tree"
>
  <ul>
    <li>
      <span>
        <strong>
          config
        </strong>
        : 
        337955292
      </span>
    </li>
    <li>
      <span>
        <strong>
          component
        </strong>
        : 
        keboola.ex-db-mysql
      </span>
    </li>
    <li>
      <span>
        <strong>
          mode
        </strong>
        : 
        run
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Tree /> Tree - with password 1`] = `
<div
  className="kb-tree"
>
  <ul>
    <li>
      <span>
        <strong>
          config
        </strong>
        : 
        337955292
      </span>
    </li>
    <li>
      <span>
        <strong>
          component
        </strong>
        : 
        keboola.ex-db-mysql
      </span>
    </li>
    <li>
      <span>
        <strong>
          mode
        </strong>
        : 
        run
      </span>
    </li>
    <li>
      <span>
        <strong>
          password
        </strong>
        : 
        <span
          title="Protected content, click to reveal"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-lock fa-w-14 fa-fw icon-clickable"
            data-icon="lock"
            data-prefix="fas"
            focusable="false"
            onClick={[Function]}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
